// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with a text 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet renders correctly with an icon 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    <svg
      class="css-32ydu7-sizeStyles e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M7.86568 2.20524C8.06654 2.4061 8.12625 2.70835 8.01686 2.9705C7.67672 3.78565 7.48853 4.68077 7.48853 5.62162C7.48853 9.42678 10.5732 12.5115 14.3784 12.5115C15.3192 12.5115 16.2144 12.3233 17.0295 11.9831C17.2916 11.8738 17.5939 11.9335 17.7948 12.1343C17.9956 12.3352 18.0553 12.6374 17.9459 12.8996C16.6966 15.8936 13.7407 18 10.2912 18C5.71209 18 2 14.2879 2 9.70883C2 6.25929 4.10641 3.30338 7.10041 2.05406C7.36257 1.94467 7.66482 2.00438 7.86568 2.20524ZM6.21722 4.15173C4.50911 5.40613 3.40133 7.42863 3.40133 9.70883C3.40133 13.514 6.48602 16.5987 10.2912 16.5987C12.5714 16.5987 14.5939 15.4909 15.8483 13.7828C15.3709 13.8682 14.8797 13.9128 14.3784 13.9128C9.79929 13.9128 6.0872 10.2007 6.0872 5.62162C6.0872 5.12031 6.13177 4.62906 6.21722 4.15173Z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render danger 1`] = `
<DocumentFragment>
  .css-oil5vi-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-oil5vi-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render disabled 1`] = `
<DocumentFragment>
  .css-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1n3x46n-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render info 1`] = `
<DocumentFragment>
  .css-2edmfk-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-2edmfk-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render neutral 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render primary 1`] = `
<DocumentFragment>
  .css-j41hqp-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-j41hqp-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render secondary 1`] = `
<DocumentFragment>
  .css-wex34o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-wex34o-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render success 1`] = `
<DocumentFragment>
  .css-1h0t7zq-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1h0t7zq-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render warning 1`] = `
<DocumentFragment>
  .css-8jzxlw-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-8jzxlw-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render medium 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render small 1`] = `
<DocumentFragment>
  .css-rxjap1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

<div
    class="css-rxjap1-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;
